Bug 297508. Allow native theme drawing to overflow the frame bounds in a reliable way by setting the frame's overflow area. Use this to work around drawing errors in some GTK2 themes. r=bryner,sr=blizzard