widget/src/gtk/nsNativeThemeGTK.h
@@ -67,6 +67,11 @@ public:
                                               PRUint8 aWidgetType,
                                               nsMargin* aResult);
 
+  virtual NS_HIDDEN_(PRBool) GetWidgetOverflow(nsIDeviceContext* aContext,
+                                               nsIFrame* aFrame,
+                                               PRUint8 aWidgetType,
+                                               nsRect* aResult);
+
   NS_IMETHOD GetMinimumWidgetSize(nsIRenderingContext* aContext,
                                   nsIFrame* aFrame, PRUint8 aWidgetType,
                                   nsSize* aResult, PRBool* aIsOverridable);
